# cobalance

./: .env  .gitignore  DOCKER.md  Makefile  PROJECT_CONTEXT.md  README.md  docker-compose.yml  guia_organizador_financeiro.md  requirements.txt  schema.sql
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 3b6def9f7fa7_nova_tabela_lançamentos.py  8e2b67153b0b_renomear_coluna_password_para_password_.py  91bb65954eb0_initial_schema.py  ebd34eb8efb2_add_coluna_colors_in_participants.py  fe546d4a7ba3_add_coluna_age_in_users.py
backend/alembic_backup/: d2d23f9df851_alteracao_nome_tabela_financial_entries_.py
backend/core/: config.py  security.py
backend/db/: database.py  init_db.py  session.py
backend/documents/: Nubank_2026-04-08.csv
backend/helpers/: apply_filters.py  create_entries_llm.py  find_participant.py
backend/models/: favorite.py  financial_entries.py  participant.py  teste.py  transaction.py  user.py
backend/routes/: agente.py  auth.py  books.py  favorites.py  financial_entries.py  participants.py  search.py  users.py
backend/schemas/: favorite.py  financial_entries.py  participant.py  transaction.py  user.py
backend/services/: book_api.py  external_api.py  import_csv_nu.py  llm_service.py
frontend/: .dockerignore  Dockerfile  PLANEJAMENTO.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.js  App.test.js  index.css  main.jsx
frontend2/: package-lock.json  package.json
frontend2/src/: App.jsx  index.css
(+95 files in other folders)
