[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.18.4",
    "fastapi>=0.136.0",
    "langchain-ollama",
    "ollama",
    "pandas==3.0.2",
    "psycopg2-binary==2.9.12",
    "pydantic==2.13.3",
    "pyjwt==2.12.1",
    "pwdlib[argon2,bcrypt]==0.3.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.26",
    "requests==2.33.1",
    "sqlalchemy==2.0.49",
    "uvicorn[standard]==0.46.0",
]
